fixed challenge xpbar height and overflow

--- a/css/main_custom.scss
+++ b/css/main_custom.scss
@@ -5288,6 +5288,8 @@ div[style="width:100%;text-align:center;margin-top:10px;background-color:rgba(0,
       border-radius: 100px !important;
       background: var(--subBgST) !important;
       margin-top: 40px;
+      overflow: hidden;
+      height: 24px;
       .chalXPBarC {
         background: linear-gradient(
           to right,
